--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://depuhh2k23.github.io/tictoe2",
+  "homepage": "https://depuhh2k23.github.io/tictactoe",
   "name": "tictoe",
   "version": "0.1.0",
   "private": true,
